err/pycanvas.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycanvas'...
Listing './lib/python3.5/site-packages/pycanvas/apis'...
Compiling './lib/python3.5/site-packages/pycanvas/apis/announcement_external_feeds.py'...
***   File "./lib/python3.5/site-packages/pycanvas/apis/announcement_external_feeds.py", line 77
    """Defaults to "full""""
                           ^
SyntaxError: EOL while scanning string literal

Compiling './lib/python3.5/site-packages/pycanvas/apis/appointment_groups.py'...
***   File "./lib/python3.5/site-packages/pycanvas/apis/appointment_groups.py", line 31
    """Defaults to "reservable""""
                                 ^
SyntaxError: EOL while scanning string literal

Compiling './lib/python3.5/site-packages/pycanvas/apis/calendar_events.py'...
***   File "./lib/python3.5/site-packages/pycanvas/apis/calendar_events.py", line 30
    """Defaults to "event""""
                            ^
SyntaxError: EOL while scanning string literal

Compiling './lib/python3.5/site-packages/pycanvas/apis/comm_messages.py'...
***   File "./lib/python3.5/site-packages/pycanvas/apis/comm_messages.py", line 50
    def __init__(self, body=None, from=None, sent_at=None, workflow_state=None, created_at=None, to=None, reply_to=None, html_body=None, id=None, subject=None):
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pycanvas/apis/content_migrations.py'...
***   File "./lib/python3.5/site-packages/pycanvas/apis/content_migrations.py", line 475
    def create_content_migration_accounts(self, account_id, migration_type, date_shift_options_day_substitutions_X=None, date_shift_options_new_end_date=None, date_shift_options_new_start_date=None, date_shift_options_old_end_date=None, date_shift_options_old_start_date=None, date_shift_options_remove_dates=None, date_shift_options_shift_dates=None, pre_attachment_*=None, pre_attachment_name=None, settings_file_url=None, settings_folder_id=None, settings_overwrite_quizzes=None, settings_question_bank_id=None, settings_question_bank_name=None, settings_source_course_id=None):
                                                                                                                                                                                                                                                                                                                                                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pycanvas/apis/enrollments.py'...
***   File "./lib/python3.5/site-packages/pycanvas/apis/enrollments.py", line 61
    """Filter by enrollment state. If omitted, 'active' and 'invited' enrollments
        are returned. When querying a user's enrollments (either via user_id
        argument or via user enrollments endpoint), the following additional
        synthetic states are supported: "current_and_invited"|"current_and_future"|"current_and_concluded""""
                                                                                 
                                                                            
                                                                            
                                                                                                            ^
SyntaxError: EOL while scanning string literal

Compiling './lib/python3.5/site-packages/pycanvas/apis/external_tools.py'...
***   File "./lib/python3.5/site-packages/pycanvas/apis/external_tools.py", line 551
    """XML tool configuration, as specified in the CC xml specification. This is
        required if "config_type" is set to "by_xml""""
                                                                                
                                                      ^
SyntaxError: EOL while scanning string literal

Compiling './lib/python3.5/site-packages/pycanvas/apis/favorites.py'...
***   File "./lib/python3.5/site-packages/pycanvas/apis/favorites.py", line 153
    def __init__(self, , context_type=None, context_id=None):
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pycanvas/apis/groups.py'...
***   File "./lib/python3.5/site-packages/pycanvas/apis/groups.py", line 542
    """Currently, the only allowed value is "accepted""""
                                                        ^
SyntaxError: EOL while scanning string literal

Compiling './lib/python3.5/site-packages/pycanvas/apis/notification_preferences.py'...
***   File "./lib/python3.5/site-packages/pycanvas/apis/notification_preferences.py", line 219
    def update_multiple_preferences_communication_channel_id(self, communication_channel_id, notification_preferences_<X>_frequency):
                                                                                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pycanvas/apis/outcome_groups.py'...
***   File "./lib/python3.5/site-packages/pycanvas/apis/outcome_groups.py", line 585
    """The new calculation method.  Defaults to "highest""""
                                                           ^
SyntaxError: EOL while scanning string literal

Compiling './lib/python3.5/site-packages/pycanvas/apis/outcomes.py'...
***   File "./lib/python3.5/site-packages/pycanvas/apis/outcomes.py", line 105
    """The new calculation int.  Only applies if the calculation_method is "decaying_average" or "n_mastery""""
                                                                                                              ^
SyntaxError: EOL while scanning string literal

Compiling './lib/python3.5/site-packages/pycanvas/apis/roles.py'...
***   File "./lib/python3.5/site-packages/pycanvas/apis/roles.py", line 79
    def create_new_role(self, label, account_id, base_role_type=None, permissions_<X>_applies_to_descendants=None, permissions_<X>_applies_to_self=None, permissions_<X>_enabled=None, permissions_<X>_explicit=None, permissions_<X>_locked=None, role=None):
                                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pycanvas/apis/submissions.py'...
***   File "./lib/python3.5/site-packages/pycanvas/apis/submissions.py", line 822
    def grade_or_comment_on_multiple_submissions_courses_submissions(self, course_id, grade_data_<student_id>_excuse=None, grade_data_<student_id>_file_ids=None, grade_data_<student_id>_group_comment=None, grade_data_<student_id>_media_comment_id=None, grade_data_<student_id>_media_comment_type=None, grade_data_<student_id>_posted_grade=None, grade_data_<student_id>_rubric_assessment=None, grade_data_<student_id>_text_comment=None):
                                                                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pycanvas/tests'...
Listing './lib/python3.5/site-packages/pycanvas-0.2.6.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
